--- a/UnionFind/CMakeLists.txt
+++ b/UnionFind/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.9.0)
 project(UnionFind)
 
-set(SOURCE ./tests.cpp ./QuickFind.cpp ./QuickUnion.cpp)
+set(SOURCE ./tests.cpp ./QuickFind.cpp ./QuickUnion.cpp ./QuickUnionWPC.cpp)
 
 add_executable(UnionFind ${SOURCE})
